# symmetry

./: .bat.json  .ccls  .clangd  .env  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Earthfile  LICENSE  README.md  build.sh  color.sh  compose.yaml  default.nix  flake.nix  ide.sh
.devcontainer/: Dockerfile  build.sh  devcontainer.json
.github/workflows/: build-and-test.yml  build_and_test.yml  devcontainer.yml  jekyll-gh-pages.yml  runpod-container.yml
.ide/: Dockerfile
.runpod/: Dockerfile
config/: 101 Lines Circular.csv  101_lines.csv  101_lines_pentagon.csv  CMakeLists.txt  Family_Lace.csv  Fuschia.csv  Heavenly Cathedral MORE.csv  Heavenly_Cathedral.csv  Plasma.csv  Pluto_Party.csv  Purple Rain.csv  Purple Strings.csv  Red Velvet.csv  Sea_Glass.csv  Set_Phasers_To_Love_Me.csv  Simplicity.csv  Zammy.csv  beetle.csv  blue.csv  default.txt  default1B.txt  defaultLong.txt  fig1.json  fig1.txt  fig10-11.json  fig10.json  fig11-11.json  fig11.json  fig12-11.json  fig12.json  fig13.json  fig14.json  fig15-11.json  fig15.json  fig16.json  fig17-11.json  fig17.json  fig18-11.json  fig18.json  fig19-11.json  (+39 more)
docker/: build.sh  run.sh
docs/: _config.yml
docs/.sass-cache/0103c8896572ecda47537744bf82afe78cd12a5e/: _basic.scssc  _reset.scssc
docs/.sass-cache/ceb94d70e3b889bb26498d073e7ebb0c247ae66d/: _contact-form.scssc  _gallery.scssc  _header.scssc  _listing.scssc  _socials.scssc  _syntax.scssc
docs/_includes/: footer.html
docs/_layouts/: default.html
docs/_pages/: about.md
docs/_posts/: 2018-06-30-demo-post.md
docs/_projects/: 2023-09-23-beetle.md  2023-09-23-behind-the-veil.md  2023-09-23-calatrava.md  2023-09-23-comida.md  2023-09-23-family-lace.md  2023-09-23-fire-spirit.md  2023-09-23-florentine.md  2023-09-23-german-machinery.md  2023-09-23-gothic-rainbow.md  2023-09-23-hardwood.md  2023-09-23-heavenly-cathedral-circular.md  2023-09-23-ice-and-fire.md  2023-09-23-izamal.md  2023-09-23-kiwi.md  2023-09-23-krill-space.md  2023-09-23-orchid.md  2023-09-23-persian-delight.md  2023-09-23-set-phasers-to-love-me.md  2023-09-23-simplicity.md  2023-09-23-turkish.md  2023-09-23-zammy.md
docs/_sass/: _basic.scss
images/: CMakeLists.txt  generate_images.sh  im1-10.pgm  im1-11.pgm  im1-5.pgm  im1-6.pgm  im1-7.pgm  im1-8.pgm  im1-9.pgm  im10-10.pgm  im10-11.pgm  im10-5.pgm  im10-6.pgm  im10-7.pgm  im10-8.pgm  im10-9.pgm  im11-10.pgm  im11-11.pgm  im11-5.pgm  im11-6.pgm  im11-7.pgm  im11-8.pgm  im11-9.pgm  im12-10.pgm  im12-11.pgm  im12-5.pgm  im12-6.pgm  im12-7.pgm  im12-8.pgm  im12-9.pgm  im13-10.pgm  im13-11.pgm  im13-5.pgm  im13-6.pgm  im13-7.pgm  im13-8.pgm  im13-9.pgm  im14-10.pgm  im14-11.pgm  im14-5.pgm  (+137 more)
include/: Complex.hpp  FPI.h  FPI.hpp  Image.hpp  Pixel.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  ColorMap.cpp  Complex.cu  FPI.cpp  INIReader.cpp  Symmetry.cpp  colorbar.cpp  colormap.cpp  colormap.h  cui.cpp  fpi.cpp  fpi.h  image.cpp  image.h  param.cpp  param.h  pbar.cpp  pbar.h  pgm2pbm.cpp  symmetry.cpp
symmetry/: CMakeLists.txt  default.nix  flake.nix
symmetry/config/: fig1-10.json  fig13-7.json  fig14-7.json  fig16-7.json  fig2-9.json  fig23-7.json  fig24-11.json  fig7-11.json  fig7-7.json  rainbow.txt
symmetry/docs/: index.html
symmetry/docs/.sass-cache/0103c8896572ecda47537744bf82afe78cd12a5e/: _mixins.scssc  _plugins.scssc
symmetry/docs/.sass-cache/ceb94d70e3b889bb26498d073e7ebb0c247ae66d/: _content.scssc  _footer.scssc
symmetry/docs/_data/: settings.yml
symmetry/docs/_projects/: 2023-09-23-beetle.md  2023-09-23-cats-cradle.md  2023-09-23-empty-dumpling.md  2023-09-23-gingerbread.md  2023-09-23-inscribed.md  2023-09-23-its-a-mood.md  2023-09-23-kaimito.md  2023-09-23-kalar-space.md  2023-09-23-lines-circular.md  2023-09-23-pluto-party.md  2023-09-23-purple-heart-tree.md  2023-09-23-purple-rain.md  2023-09-23-sea-glass.md  2023-09-23-underfolds.md  2023-09-23-venetian.md  2023-09-23-zammy.md
symmetry/docs/_sass/_includes/: _content.scss
symmetry/docs/images/: im20-11_CatsCradle.textClipping
symmetry/images/: im1-10.pgm  im10-11.pgm  im11-11.pgm  im13-7.pgm  im2-9.pgm  im22-11.pgm  im23-7.pgm  im24-11.pgm  im3-11.pgm  im7-7.pgm  im9-8.pgm
symmetry/include/: Color.h  ColorMap.h  Complex.hpp  FPI.hpp  Image.hpp  PBar.h  Param.h  Pixel.hpp
symmetry/lib/: CMakeLists.txt
symmetry/src/: Color.cpp  Complex.cpp  Complex.cu  FPI.cu  Image.cpp  PBar.cpp  Param.cpp  Symmetry.cpp
symmetry/tests/: CMakeLists.txt  bComplex.cpp  bFPI.cpp  tColorMap.cpp  tComplex.cpp  tFPI.cpp  tParam.cpp  tPixel.cpp
symmetry/tests/config/: test_iter10.json
symmetry/tests/images/: CMakeLists.txt
tests/: CMakeLists.txt  tColorBar.cpp  tComplex.cpp  tFPI.cpp  tImage.cpp  tparamtest.cpp  tpgm2pbm.cpp
tests/config/: CMakeLists.txt  bwgradient.csv  default.txt  missingAlpha.txt  missingImage.txt  purpleMonochrome.txt  rgbgradient.csv
